<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View"/>

        <variable name="iWantCur" type="com.kenshin.mcassigment.mastercardinterviewassignment.model.Currency"/>

        <variable name="iHaveCur" type="com.kenshin.mcassigment.mastercardinterviewassignment.model.Currency"/>

    </data>

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/layout_toolbar" android:id="@+id/incToolbar"/>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nsvMainContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="@dimen/activity_vertical_margin"
                tools:context="com.kenshin.mcassigment.mastercardinterviewassignment.activity.MainActivity">

                <android.support.v7.widget.CardView
                    android:id="@+id/cvHaveCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="10dp"
                    android:background="?selectableItemBackground"
                    android:clickable="@{iHaveCur == null}">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:text="@string/select_have_cur"
                        android:padding="@dimen/activity_vertical_margin"
                        android:visibility="@{iHaveCur == null ? View.VISIBLE : View.GONE}" />

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_vertical_margin"
                        android:visibility="@{iHaveCur == null ? View.GONE : View.VISIBLE}">

                        <TextView
                            android:id="@+id/tvIhave"
                            android:text="@string/i_have"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@android:color/darker_gray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>
                        
                        <ImageView
                            android:id="@+id/ivHaveCountryFlag"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="8dp"
                            android:background="?selectableItemBackgroundBorderless"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvIhave"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:setGlideDrawableCircle="@{iHaveCur.flagPath}"/>

                        <TextView
                            android:id="@+id/tvHaveCtyCode"
                            android:background="?selectableItemBackgroundBorderless"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:drawableEnd="@{@drawable/ic_expand}"
                            app:layout_constraintStart_toEndOf="@id/ivHaveCountryFlag"
                            app:layout_constraintTop_toTopOf="@id/ivHaveCountryFlag"
                            app:layout_constraintBottom_toBottomOf="@+id/ivHaveCountryFlag"
                            app:layout_constraintVertical_bias="0.5"
                            android:text="@{iHaveCur.code}"
                            tools:text="AED" />

                        <TextView
                            android:id="@+id/tvHaveExchangeRate"
                            tools:text="1 USD = 0.8900 EUR"
                            android:textAppearance="?android:textAppearance"
                            android:textColor="@android:color/darker_gray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            app:layout_constraintHorizontal_bias="1"
                            app:layout_constraintStart_toEndOf="@+id/tvIhave"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="@+id/tvIhave"
                            app:layout_constraintBaseline_toBaselineOf="@+id/tvIhave"/>

                        <com.blackcat.currencyedittext.CurrencyEditText
                            xmlns:currencyTextBox="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/cdtHaveAmount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:focusable="true"
                            android:textAppearance="?android:textAppearanceLarge"
                            app:layout_constraintStart_toEndOf="@id/tvHaveCtyCode"
                            app:layout_constraintTop_toTopOf="@id/ivHaveCountryFlag"
                            app:layout_constraintBottom_toBottomOf="@+id/ivHaveCountryFlag"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintVertical_bias="0.5"
                            app:layout_constraintHorizontal_bias="1"
                            android:visibility="gone"
                            android:inputType="number"
                            android:longClickable="false"
                            currencyTextBox:decimal_digits="2"/>

                        <android.support.v4.widget.ContentLoadingProgressBar
                            android:id="@+id/clpbHaveLoading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Base.Widget.AppCompat.ProgressBar"
                            android:visibility="gone"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/tvHaveCtyCode"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.9"/>


                    </android.support.constraint.ConstraintLayout>

                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:id="@+id/cvWantCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="10dp"
                    android:clickable="@{iWantCur == null}">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:text="@string/currency_i_want"
                        android:padding="@dimen/activity_vertical_margin"
                        android:visibility="@{iWantCur == null ? View.VISIBLE : View.GONE}" />

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_vertical_margin"
                        android:visibility="@{iWantCur == null ? View.GONE : View.VISIBLE}">

                        <TextView
                            android:id="@+id/tvIWant"
                            android:text="@string/i_want"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@android:color/darker_gray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="4dp"
                            android:paddingEnd="4dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <ImageView
                            android:id="@+id/ivWantCountryFlag"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginTop="8dp"
                            android:background="?selectableItemBackgroundBorderless"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvIWant"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:setGlideDrawableCircle="@{iWantCur.flagPath}"/>

                        <TextView
                            android:id="@+id/tvWantCtyCode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="?selectableItemBackgroundBorderless"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:textAppearance="?android:textAppearanceLarge"
                            android:drawableEnd="@{@drawable/ic_expand}"
                            app:layout_constraintStart_toEndOf="@id/ivWantCountryFlag"
                            app:layout_constraintTop_toTopOf="@id/ivWantCountryFlag"
                            app:layout_constraintBottom_toBottomOf="@+id/ivWantCountryFlag"
                            app:layout_constraintVertical_bias="0.5"
                            android:text="@{iWantCur.code}"
                            tools:text="AED" />

                        <TextView
                            android:id="@+id/tvWantExchangeRate"
                            tools:text="1 USD = 0.8900 EUR"
                            android:textAppearance="?android:textAppearance"
                            android:textColor="@android:color/darker_gray"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            app:layout_constraintHorizontal_bias="1"
                            app:layout_constraintStart_toEndOf="@+id/tvIWant"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="@+id/tvIWant"
                            app:layout_constraintBaseline_toBaselineOf="@+id/tvIWant"/>

                        <com.blackcat.currencyedittext.CurrencyEditText
                            xmlns:currencyTextBox="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/cdtWantAmount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:focusable="true"
                            android:textAppearance="?android:textAppearanceLarge"
                            app:layout_constraintStart_toEndOf="@id/tvWantCtyCode"
                            app:layout_constraintTop_toTopOf="@id/ivWantCountryFlag"
                            app:layout_constraintBottom_toBottomOf="@+id/ivWantCountryFlag"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintVertical_bias="0.5"
                            app:layout_constraintHorizontal_bias="1"
                            android:visibility="gone"
                            android:inputType="number"
                            android:longClickable="false"
                            currencyTextBox:decimal_digits="2"/>

                        <android.support.v4.widget.ContentLoadingProgressBar
                            android:id="@+id/clpbWantLoading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Base.Widget.AppCompat.ProgressBar"
                            android:visibility="gone"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/tvWantCtyCode"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.9"/>

                    </android.support.constraint.ConstraintLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <LinearLayout
            android:id="@+id/llErrorLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:visibility="gone"
            android:gravity="center">

            <TextView
                android:id="@+id/tvErrorOccurred"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/error_occurred"/>

            <Button
                android:id="@+id/btnRetry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry"/>
        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>
